[gd_scene load_steps=6 format=3 uid="uid://smt6ks8tnyxg"]

[ext_resource type="Script" path="res://source/scenes/menus/settings/custom_button.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bc0p34mqvniv4" path="res://source/scenes/menus/main_menu/menu_background.tscn" id="2_6fmhc"]
[ext_resource type="Script" path="res://source/scenes/menus/main_menu/main_menu.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://mxitkcc2ichh" path="res://assets/audio/sfx/idle.ogg" id="5_sflj8"]
[ext_resource type="AudioStream" uid="uid://cup07t8h0ln18" path="res://assets/audio/sfx/whistle.ogg" id="6_4dmac"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="menu_background" parent="." instance=ExtResource("2_6fmhc")]
z_index = -9
layout_mode = 1
offset_top = -1.0
offset_bottom = -1.0

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.133681
anchor_bottom = 1.0
offset_right = 79.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 43
bbcode_enabled = true
text = "[center]Rail Assembly"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="continue" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"
flat = true
script = ExtResource("2")

[node name="load" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Load"
flat = true
script = ExtResource("2")

[node name="play" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Play"
flat = true
script = ExtResource("2")

[node name="settings" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Settings"
flat = true
script = ExtResource("2")

[node name="quit" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Quit"
flat = true
script = ExtResource("2")

[node name="train_idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sflj8")
autoplay = true
bus = &"Effects"

[node name="train_whistle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4dmac")
bus = &"Effects"

[node name="music" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]

[editable path="menu_background"]
